[gd_scene load_steps=2 format=3 uid="uid://rh1o32f8llsb"]

[ext_resource type="Script" path="res://scenes/maps/lobby/scenes/skin_selector/skin_selector.gd" id="1_m1i30"]

[node name="SkinSelector" type="CanvasLayer"]
script = ExtResource("1_m1i30")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Wybierz swoją postać"
horizontal_alignment = 1

[node name="SkinTextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
expand_mode = 2
stretch_mode = 4

[node name="SkinOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/SkinOptionButton" to="." method="_on_skin_option_button_item_selected"]
